# migration-office

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  build.sh  generator.py  install.sh  run.sh  vg.supp
resources/: alerts.txt  fugitives.txt  gen_alerts.txt  gen_alerts_2.txt  gen_fugitives.txt  gen_fugitives_2.txt  gen_people.txt  gen_people_2.txt  people.txt
src/: CMakeLists.txt  Feature.cpp  Feature.h  MinisterOfSecurity.cpp  Passport.cpp  Passport.h  Person.cpp  Person.h  Resident.h  WantedPersonAlert.cpp  WantedPersonAlert.h  main.cpp
src/main/: Alerts.cpp  Alerts.h  CMakeLists.txt  ConfigurationFileReader.cpp  ConfigurationFileReader.h  Feature.cpp  Foreigner.cpp  Foreigner.h  MinisterOfSecurity.cpp  MinisterOfSecurity.h  Passport.cpp  Passport.h  Person.cpp  Person.h  PersonsGenerator.cpp  PersonsGenerator.h  Resident.cpp  Resident.h  Spawnable.h  Spawnables.cpp  Spawnables.h  Spawner.cpp  Spawner.h  WantedPersonAlert.cpp  WantedPersonAlert.h  WantedPersonsList.cpp  main.cpp
src/main/alert_deleter/: AlertDeleter.cpp  AlertDeleter.h  CMakeLists.txt  main.cpp
src/main/common/: CMakeLists.txt  ConfigurationFileReader.h  MinisterOfSecurity.cpp  MinisterOfSecurity.h  PersonsGenerator.cpp  PersonsGenerator.h  Resident.cpp  Stamper.cpp  WantedPersonAlert.h
src/main/common/concurrency/: AlertsSharedMemory.cpp  AlertsSharedMemory.h  CMakeLists.txt  EventHandler.h  ExclusiveLock.cpp  ExclusiveLock.h  Fifo.cpp  Fifo.h  FifoReader.cpp  FifoReader.h  FifoWriter.cpp  FifoWriter.h  Lock.cpp  Lock.h  Message.h  Pipe.cpp  Pipe.h  PipeReader.cpp  PipeReader.h  PipeWriter.cpp  PipeWriter.h  Queue.h  Semaphore.cpp  Semaphore.h  SharedLock.cpp  SharedLock.h  SharedMemory.h  SharedMemoryArray.h  SignalHandler.cpp  SignalHandler.h
src/main/common/configuration_file_reader/: AlertDeserializer.cpp  AlertDeserializer.h  CMakeLists.txt  ConfigurationFileReader.cpp  ConfigurationFileReader.h  PersonDeserializer.cpp  PersonDeserializer.h
src/main/common/definitions/: AlertData.h  CMakeLists.txt  ConfigurationFileFields.h  FileNames.h  StatisticsData.h
src/main/common/entities/: CMakeLists.txt  Feature.cpp  Feature.h  Features.cpp  Features.h  Foreigner.cpp  Foreigner.h  Logger.cpp  Logger.h  Message.h  Passport.cpp  Passport.h  Person.cpp  Person.h  PersonDeserializer.cpp  PersonMessage.h  PersonSerializer.cpp  PersonSerializer.h  Resident.cpp  Resident.h  Spawnables.cpp  Spawnables.h  Spawner.h  Stamper.cpp  Stamper.h  Stampers.cpp  Stampers.h  WantedPersonAlert.h
src/main/common/rest/: CMakeLists.txt  ConfigurationFileReader.cpp  ConfigurationFileReader.h  MinisterOfSecurity.h  PersonsGenerator.h  Spawnable.h  Spawnables.cpp  Spawnables.h  Spawner.cpp  Spawner.h  WantedPersonAlert.cpp  WantedPersonAlert.h  WantedPersonsList.h
src/main/common/signal_handlers/: CMakeLists.txt  SIGUSRHandler.cpp  SIGUSRHandler.h
src/main/common/signal_handlers/sigint_handler/: CMakeLists.txt  SIGINTHandler.h
src/main/common/signal_handlers/signal_handler/: CMakeLists.txt  SignalHandler.h
src/main/migration_booth/: CMakeLists.txt  MigrationBooth.cpp  MigrationBooth.h  PersonsQueue.cpp  PersonsQueue.h  Police.cpp  Police.h  Stampers.cpp  Stampers.h  main.cpp
src/main/migration_booth/lib/: CMakeLists.txt  MigrationBooth.cpp  MigrationBooth.h  PersonsQueue.cpp  PersonsQueue.h  Police.cpp  SIGINTHandler.cpp  SIGINTHandler.h  Stampers.cpp
src/main/migration_booth/lib/communicators/: BoothsWithUnreadFugitives.cpp  CMakeLists.txt  PersonsQueue.h  Police.cpp  Police.h
src/main/migration_booth/lib/deserializers/: CMakeLists.txt  PersonDeserializer.cpp
src/main/migration_booth/lib/entities/: BoothsWithUnreadFugitives.cpp  BoothsWithUnreadFugitives.h  CMakeLists.txt  Foreigner.h  Passport.h  PersonsQueue.cpp  PersonsQueue.h  Police.cpp  Police.h  Resident.h  Stampers.cpp  Stampers.h  StatisticsCommunicator.cpp  StatisticsCommunicator.h
src/main/migration_booth/lib/signal_handlers/: CMakeLists.txt
src/main/migration_office/: CMakeLists.txt  MigrationOffice.cpp  MigrationOffice.h  SIGINTHandler.cpp  SIGINTHandler.h  main.cpp
src/main/migration_office/lib/entities/: BoothsWithUnreadFugitives.cpp  BoothsWithUnreadFugitives.h  CMakeLists.txt  EnviromentInitializer.cpp  EnviromentInitializer.h  Stampers.cpp  Stampers.h
src/main/migration_office/lib/signal_handlers/: CMakeLists.txt  SIGINTHandler.cpp  SIGINTHandler.h
src/main/migration_spawner/: CMakeLists.txt  PeopleSpawner.cpp  PeopleSpawner.h  main.cpp
src/main/migration_spawner/lib/signal_handlers/: CMakeLists.txt  SIGINTHandler.h
src/main/ministry_of_security/: CMakeLists.txt  MinisterOfSecurity.cpp  MinisterOfSecurity.h  main.cpp
src/main/ministry_of_security/lib/: CMakeLists.txt  MinisterOfSecurity.cpp  MinisterOfSecurity.h
src/main/ministry_of_security/lib/entities/: AlertSpawner.cpp  AlertSpawner.h  BoothsWithUnreadFugitives.cpp  BoothsWithUnreadFugitives.h  CMakeLists.txt
src/main/ministry_of_security/lib/signal_handlers/: CMakeLists.txt
src/main/old_main/: CMakeLists.txt  Person.h  PersonsGenerator.cpp  Resident.h  Spawner.cpp  WantedPersonAlert.h
src/main/people_spawner/: CMakeLists.txt  PeopleSpawner.cpp  PeopleSpawner.h  main.cpp
src/main/people_spawner/lib/signal_handlers/: CMakeLists.txt
src/main/statistics/: CMakeLists.txt  Statistics.cpp  Statistics.h  main.cpp
src/test/: CMakeLists.txt  main.cpp  test_example.cpp  test_feature.cpp  test_features.cpp  test_filereader.cpp  test_logger.cpp  test_minister.cpp  test_persondeserializer.cpp  test_persons_generator.cpp  test_police.cpp  test_runner.cpp  test_spawner.cpp
